{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 34,
  "lineage": "e9e29f4b-455d-7258-9fa9-81dedba55c4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab1_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-016eb5d644c333ccb",
            "arn": "arn:aws:ec2:us-east-1:385582076770:instance/i-025c540274a40b9d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025c540274a40b9d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095eb047cb7b00786",
            "private_dns": "ip-10-0-0-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.84",
            "public_ip": "3.85.176.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf0787269f367d1c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0770c054517e61d07",
            "tags": {
              "Name": "Terra_EC2"
            },
            "tags_all": {
              "Name": "Terra_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0e16c7efb57879952"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.lab1_subnet",
            "aws_vpc.lab1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385582076770:internet-gateway/igw-07432c93be28e4326",
            "id": "igw-07432c93be28e4326",
            "owner_id": "385582076770",
            "tags": {
              "Name": "Terra_lab1_gw"
            },
            "tags_all": {
              "Name": "Terra_lab1_gw"
            },
            "vpc_id": "vpc-065c3c79922d10528"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385582076770:route-table/rtb-07b470f92cf6c5f00",
            "id": "rtb-07b470f92cf6c5f00",
            "owner_id": "385582076770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07432c93be28e4326",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terra_lab1_rt"
            },
            "tags_all": {
              "Name": "Terra_lab1_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065c3c79922d10528"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.lab1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adf2c183716e7f70",
            "route_table_id": "rtb-07b470f92cf6c5f00",
            "subnet_id": "subnet-0770c054517e61d07"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.lab1_subnet",
            "aws_vpc.lab1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385582076770:security-group/sg-0e16c7efb57879952",
            "description": "Allow http requests from outside",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e16c7efb57879952",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allowing http",
            "name_prefix": "",
            "owner_id": "385582076770",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terra_lab1_sg"
            },
            "tags_all": {
              "Name": "Terra_lab1_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065c3c79922d10528"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385582076770:subnet/subnet-0770c054517e61d07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0770c054517e61d07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385582076770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terra_lab1_pub_subnet"
            },
            "tags_all": {
              "Name": "Terra_lab1_pub_subnet"
            },
            "vpc_id": "vpc-065c3c79922d10528"
          },
          "dependencies": [
            "aws_vpc.lab1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385582076770:vpc/vpc-065c3c79922d10528",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c0b1172e714f68ea",
            "default_route_table_id": "rtb-05106b582047d754f",
            "default_security_group_id": "sg-00808af550a9f6583",
            "dhcp_options_id": "dopt-0763b10d0c2bb791f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065c3c79922d10528",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05106b582047d754f",
            "owner_id": "385582076770",
            "tags": {
              "Name": "Terra_Lab1_VPC"
            },
            "tags_all": {
              "Name": "Terra_Lab1_VPC"
            }
          }
        }
      ]
    }
  ]
}